--- a/index.html
+++ b/index.html
@@ -7,11 +7,110 @@
     <title>.biscuit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div>
-    
-  </div>
-</body></html>
+    <div id="parent-container">
+        <div id="pfp" class="container">
+            <img src="img/pfp no bg.png">
+        </div>
+        <div id="survey" class="container">
+            <div class="title">
+                <p>So tell me, how exactly did you get here?</p>
+            </div>
+            <div class="option-list">
+                <div class="option">
+                    <p>> I stalked your profile on Discord.</p>
+                </div>
+                <div class="option">
+                    <p>> I searched Google for it.</p>
+                </div>
+                <div class="option">
+                    <p>> A friend linked me to it after stalking your Discord.</p>
+                </div>
+                <div class="option">
+                    <p>> I typed a random set of characters into my browser and it took me here.</p>
+                </div>
+            </div>
+        </div>
+        <div id="socials">
+            <div class="row">
+                <div id="battlenet" class="card">
+                    <img class="social-img" src="img/battlenet.png">
+                    <div class="info">
+                        <p class="social-title">Battle.net</p>
+                        <p class="details">biscuit-090</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+                <div id="discord" class="card">
+                    <img class="social-img" src="img/discord.png">
+                    <div class="info">
+                        <p class="social-title">Discord</p>
+                        <p class="details">.biscuit</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="steam" class="card">
+                    <img class="social-img" src="img/steam.png">
+                    <div class="info">
+                        <p class="social-title">Steam</p>
+                        <p class="details">biscuit090</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+                <div id="league" class="card">
+                    <img class="social-img" src="img/league.png">
+                    <div class="info">
+                        <p class="social-title">League of Legends</p>
+                        <p class="details">Biscuit090</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="epic" class="card">
+                    <img class="social-img" src="img/epicgames.png">
+                    <div class="info">
+                        <p class="social-title">Epic Games</p>
+                        <p class="details">biscuit-090</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+                <div id="github" class="card">
+                    <img class="social-img" src="img/github.png">
+                    <div class="info">
+                        <p class="social-title">my throwaway github</p>
+                        <p class="details">biscuit-090</p>
+                    </div>
+                    <div class="copy-to-clipboard">
+                        <img src="img/copy.png">
+                        <p class="copy-text">Copy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <a href="https://www.youtube.com/watch?v=TlXDyO4fyD4" target="_blank">Click to get rick-rolled</a>
+    </footer>
+</body>
+</html>
