--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="survey" class="container" style="--animation-order: 2;">
             <div class="title">
                 <p>Answer carefully, are you a federal agent?</p>
-                <span><u>Double click</u> to choose your answer</span>
+                <p class="span"><u>Double click</u> to choose your answer</p>
             </div>
             <div class="option-list">
                 <div id="option1" class="option">
