--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="survey" class="container" style="--animation-order: 2;">
             <div class="title">
-                <p>Answer carefully, are you a federal agent?</p>
+                <p class="main">Answer carefully, are you a federal agent?</p>
                 <p class="span"><u>Double click</u> to choose your answer</p>
             </div>
             <div class="option-list">
