--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div id="github" class="card">
                     <img class="social-img" src="img/github.png">
                     <div class="info">
-                        <p class="social-title">my throwaway github</p>
+                        <p class="social-title">throwaway github</p>
                         <p class="details">biscuit-090</p>
                     </div>
                     <div class="copy-to-clipboard">
